--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "my-new-project",
   "type": "module",
   "devDependencies": {
-    "@wdio/cli": "^8.36.1",
-    "@wdio/cucumber-framework": "^8.36.1",
-    "@wdio/local-runner": "^8.36.1",
-    "@wdio/spec-reporter": "^8.36.1",
+    "@wdio/browserstack-service": "^9.17.0",
+    "@wdio/cli": "^8.45.0",
+    "@wdio/cucumber-framework": "^9.17.0",
+    "@wdio/local-runner": "^9.17.0",
+    "@wdio/spec-reporter": "^9.17.0",
+    "@wdio/visual-service": "^8.0.4",
     "chromedriver": "^137.0.0",
     "wdio-chromedriver-service": "^8.0.1",
     "wdio-vscode-service": "^6.0.3"
